app/scss/modules/_header.scss
header {
	
	overflow: auto;
	padding-top: 2em;
	
	@include mediaQuery(640px){
		
		position: relative;
		
	}
	
	.nav-bar {
		
		@include outer-container;
		
		height: 80px;

		.logo {
			
			float: left;
			margin-left: 2em;
			width: 80px;
			
		}
		
		#mobile-menu-trigger {
		
			display: block;
			width: 70px;
			position: absolute;
			right: 1em;
			text-align: center;
			text-decoration: none;
			top: 0;
	
			.icon {
				
				display: block;
				height: 40px;
				padding-bottom: 1em;
				
				@include mediaQuery(500px){
				
					height: 40px;
				
				}
				
				&:before {
				
				box-shadow: 0 16px 0 1px white, 0 24px 0 1px white, 0 32px 0 1px white;
				content: "";
				display: block;
				height: 0;
				left: 0;
				margin-left: 1em;
				margin-top: 2.5em;
				top: 0;
				width: 24px;			
				
				}
				
			}
			
			@include mediaQuery(620px){
				
				display: none;
				
			}
			
			.text {
				
				@include lato-light(14px);
				
				color: white;
				margin-right: 1em;
				
			}
			
		}
		
		nav {
		
			@include lato-normal(22px);
		
			clear: both;
			display: none;
			padding-top: 30px;
			text-transform: uppercase;
			
			ul {
					
				li {
					
					padding-left: 35px;
			
					a {
						
						color: $white;
						padding-bottom: .2em;
						
					}
					
				}
				
			}
			
			@include mediaQuery(620px){
				
				clear: none;
				display: block;
				float: left;
				
				ul {
					
					li {
						
						display: inline-block;
						
						&.current-menu-item > a {
							
							border-bottom: 1px solid $bright-magenta;
							
						}
						
						a {
							
							&:hover {

								border-bottom: 1px solid $bright-magenta;
								
							}
							
						}
						
					}
					
				}
				
			}
			
		}
		
		#search-trigger {
		
			.search {
		
				display: none;
			
				@include mediaQuery(675px){
					
					display: block;
					opacity: .2;
					padding-top: 20px;
					position: absolute;
					right: 2em;
					width: 40px;
					z-index: 10;
					
					@include transition (all 100ms ease-in-out);
					
					&:hover {
						
						opacity: .6;
						
					}	
						
				}
				
			}
		
		}
		
		.form {
					
			display: none;
			
			@include transition (all 100ms ease-in-out);
			
			label {
				
				display: none;
				
			}
			
		}
		
		.form-open {
		
			display: none;
			
			@include mediaQuery(675px){
			
				background-color: $navy;
				background-image: url('../../img/hex.svg');
				background-position: left top;
				background-size: 220px;	
				bottom: 0;	
				display: block !important;
				height: 100%;
				left: 0;
				position: absolute;
				right: 0;
				top: 0;
				width: 100%;
				z-index: 1;
				
				form {
					
					margin-top: 1em;
					padding: 3em 8em;
					
					input {
						
						&[type=submit] {
							
							margin-top: 1em;
							width: 100%;
							
							&:hover {
								
								background-color: $bright-blue;
								
							}
							
						}
						
					}
					
				}
			
			}
				
		}
		
	}
	
	.masthead {
	
		@include span-columns(12);
		
		line-height: 2.4em;
		
		span {
			
			text-transform: none;
			
		}
		
		@include mediaQuery(800px){
			
			@include span-columns(7);
			
		}
		
	}
	
	.photo {
	
		display: none;
		
		@include mediaQuery(800px){
			
			bottom: 0;
			display: inline-block;
			position: absolute;
			
		}
		
	}
	
	.tall {
			
			width: 250px;
		}
		
	.short {
		
		width: 200px;
		
	}
	
	.home {
		
		@extend .masthead;
		
		padding: 2em 2.75em 3.5em 2em;
		
		h1 {
			
			border-bottom: 1px solid $bright-magenta;
			border-top: 1px solid $bright-magenta;
			font-size: 1.5em;
			line-height: 1.25em;
			padding: .75em 0;
			
		}
		
		@include mediaQuery(1024px){
			
			h1 {
				
				font-size: 2.125em;
				
			}
			
		}
		
	}
	
	.interior {
		
		@extend .masthead;
		
		padding: 2em 2.75em 2.5em 2em;
		
		h1 {
		
			font-size: 30px;
			
		}
		
	}
	
}

.menu-open {
		
	@include transition (all 100ms ease-in-out);	
	
	background-color: $true-blue;	
	display: block !important;
	margin-top: 4.75em;
	position: absolute;
	width: 100%;
	
	ul > li {
		
		padding: 0 1em 1.5em 1em;
		
	}
	
}

.border-bottom {
	
	border-bottom: 1px solid $bright-magenta;
	
}

.single-post {
	
	.menu-item-19 > a {
		
		@extend .border-bottom;
		
	}
	
}

.single-matter, .post-type-archive-matter {

	@include mediaQuery(640px){
	
		.menu-item-20 > a {
			
			border-bottom: 1px solid $bright-magenta;
			
		}
	
	}
	
}

.page-id-38 {
	
	.menu-item-16 > a {
		
		@extend .border-bottom;
		
	}
	
}

